fix style in visibility container

--- a/src/components/DashBoard/DashBoardControlBar/DashBoardControlBar.module.css
+++ b/src/components/DashBoard/DashBoardControlBar/DashBoardControlBar.module.css
@@ -14,3 +14,7 @@
     display: flex;
     align-items: center;
 }
+
+.settingsContainerInCrm{
+    right: -5px;
+}
